--- a/index.html
+++ b/index.html
@@ -164,45 +164,45 @@ body {
 <b class="c">Shell</b> 
 <b class="m">Tools</b> &
 <b class="o">Human-Design</b>.</p>
-<h3>In Theorie</h3>
-<p>Wenn Text zu <b>25%</b> aus relevanten Kerninhalt besteht,
-der nach einem Tag zu 50%, nach zwei Tagen zu <b>30%</b> im Gedächtnis verbleibt,
-ergibt das <b>7,5%</b> Textinhalt mit langfristiger Einprägung.</p>
+<p class="more-text">
+Außerdem <span class="more-text">ଘ(੭<i class="glow-font">*ˊᵕˋ)੭*☆ﾟ</i></span><b class="gtc3">*･｡ﾟᴸᵉᵘᶜʰᵗᵉᶠᶠᵉᵏᵗᵉ</b></p>
+<h3>Konzept und Theorie</h3>
+<p>Wenn Text zu <b>25%</b> aus relevantem Kerninhalt besteht und nach einem Tag zu 50%, nach zwei Tagen zu <b>30%</b> im Gedächtnis verbleibt,
+ergibt das <b>7,5%</b> eingeprägten Textinhalt.</p>
 <b>Beispiel A</b><aside class="more-text">Zwanzig Zwerge machen Handstand,
-zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
-<b>Beispiel B</b><aside class="more-text">Zwergenhandstände,Ort: 10,Schrank&nbsp;10,Strand</aside>
+zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside><br>
+<b>Beispiel B</b><aside class="more-text">Zwergenhandstände,Ort: 10,Schrank&nbsp;10,Strand</aside><br><hr>
 <div class="catchem">
+<b>Vergleich von A und B</b>
 <table id="table_01">
-<caption>Text B ist ~23% leichter zu merken</caption>
-    <thead>
-        <tr>
-        <th>Text</th>
-        <th>Wörter</th>
-        <th>Zeichenfolgen</th>
-        <th>Kerninhalte</th>
-        <th>Relevanz</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-        <td><span>A</span></td>
-        <td><span>13</span></td>
-        <td><span>10</span></td>
-        <td><span>6</span></td>
-        <td><span>60%</span></td>
-        </tr>
-        <tr>
-        <td><span><b>B</b></span></td>
-        <td><span>8</span></td>
-        <td><span>6</span></td>
-        <td><span>5</span></td>
-        <td><span><b>83%</b></span></td>
-        </tr>
-    </tbody>
-</table>
+<thead>
+    <tr>
+    <th>Text</th>
+    <th>Wörter</th>
+    <th>Zeichenfolgen</th>
+    <th>Inhalte</th>
+    <th>Relevanz</th>
+    </tr>
+</thead>
+<tbody>
+    <tr>
+    <td><span>A</span></td>
+    <td><span>13</span></td>
+    <td><span>10</span></td>
+    <td><span>6</span></td>
+    <td><span>60%</span></td>
+    </tr>
+    <tr>
+    <td><span><b>B</b></span></td>
+    <td><span>8</span></td>
+    <td><span>6</span></td>
+    <td><span>5</span></td>
+    <td><span><b>83%</b></span></td>
+    </tr>
+</tbody>
+</table></p>
 </div>
-<p>Ergonomisches Darstellungs-Konzept zur leichteren Interpretation visueller Information.<br>
-Mit <span class="more-text">ଘ(੭<i class="glow-font">*ˊᵕˋ)੭*☆ﾟ</i></span><b class="gtc3">*･｡ﾟᴸᵉᵘᶜʰᵗᵉᶠᶠᵉᵏᵗᵉ</b></p>
+<p>Text B ist als visuelle Information ~23% ergonomischer und leichter zu merken.</p>
 <div id="desktop-only">
 <h3>Optionale Tastensteuerung</h3>
 <p class="keyboard-buttons">Unterstützung einer schnellen Navigation. Blaue Elemente oder Bilder mit <span>TAB</span> selektiert und mit <span>Enter</span> oder <span>Leer</span> öffnen, ohne Maus.</p>
@@ -261,7 +261,7 @@ Mit <span class="more-text">ଘ(੭<i class="glow-font">*ˊᵕˋ)੭*☆ﾟ</i><
 </div>
 </article>
 <article class="content flow">
-<h2>Links</h2>
+<h2 class="domain-font">Links</h2>
 <div id="topics">
   <ul>
 <h4>Linux</h4>
@@ -296,20 +296,16 @@ Mit <span class="more-text">ଘ(੭<i class="glow-font">*ˊᵕˋ)੭*☆ﾟ</i><
 <h2>Human Design</h2>
 <div id="topics">
   <ul>
-<h4>Grundlagen</h4>
-    <li><a href="pages/template.htm">Ra Uru Hu</a></li>
-    <li><a href="pages/template.htm">64 Hexagramme</a></li>
-    <li><a href="pages/template.htm">Astrologie</a></li>
-    <li><a href="pages/template.htm">Energetische Signatur</a></li>
+<h4>Ra Uru Hu</h4>
     <li><a href="pages/template.htm">Bodygraph</a></li>
-    <li><a href="pages/template.htm">Die Sephiroth</a></li>
-  </ul>
-  <ul>
-<h4>Elemente</h4>
+<h4>Chakren</h4>
+    <li><a href="pages/template.htm">Energetische Signatur</a></li>
+<h4>I Ging</h4>
+    <li><a href="pages/template.htm">64 Hexagramme</a></li>
+<h4>Astrologie</h4>
     <li><a href="pages/template.htm">Planeten</a></li>
-    <li><a href="pages/template.htm">I Ging</a></li>
-    <li><a href="pages/template.htm">Kabbala</a></li>
-    <li><a href="pages/template.htm">Chakren</a></li>
+<h4>Kabbala</h4>
+    <li><a href="pages/template.htm">Die Sephiroth</a></li>
   </ul>
   <ul>
 <h4>Strategien</h4>
@@ -396,13 +392,13 @@ Mit <span class="more-text">ଘ(੭<i class="glow-font">*ˊᵕˋ)੭*☆ﾟ</i><
 <br>
 <!-- ABOUT_ME -->
     <div class="catchem this_too_deep"><h3>Admin, User, Gamer, Hikikomori</h3>
-    <aside class="more-text zitiert">Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske.<br><cite>- V wie Vendetta (2005)</cite></aside><p>Unwissend, wie das Universum selbst. Bin ich Licht, Frequenz Vibration? Simulation? Ist Neugier der Sinn? Ist es <b class="b">Wasser</b> zu trinken und <b class="y">Luft</b> zu atmen? Wohin führt das letzte Geheimnis, das im Tausch, wieder verborgen zurückkehrt. Dessen Wahrheit unfassbar im Rauch des <b class="r">Feuers</b> versteckt, und nur schweigende Zeugen aus <b class="o">Erde</b>, verweht im <b>Wind</b>. Zu Sein um zu Suchen, bewegt von 1 durch 2 mal 2 Teile mit jeweils 5 Elementen, erschaffen 3 6 9 und kommunizieren 1/137.</p>
+    <aside class="more-text zitiert">Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske.<br><cite>- V wie Vendetta (2005)</cite></aside><p>Unwissend, das Universum selbst. Bin ich Licht, Frequenz, Vibration? Simulation? Ist Neugier der Sinn? Ist es <b class="b">Wasser</b> zu trinken und <b class="y">Luft</b> zu atmen? Wohin führt das Geheimnis, das im Tausch, wieder verborgen zurückkehrt. Unfassbare Wahrheit im Rauch des <b class="r">Feuers</b> versteckt, als schweigende Zeugen aus <b class="o">Erde</b>, verweht im <b>Wind</b>. Sein um zu Suchen, wir von 2 Ganzen als 1 aus 2 mal 2 Teile mit jeweils 5 Elementen, für 1 nach <b class="m">3 6 9</b>, in <b class="glow-font gtc3">1/137</b>.</p>
 <aside class="more-text zitiert">
 <q>If you want to find the secrets of the universe, think in terms of energy, frequency and vibration.</q><br>
 <cite>- Nikola Tesla (1856-1943)</cite></aside></div>
 </article>
 <article class="content flow">
-<h2>Themen</h2>
+<h2 class="domain-font">Themen</h2>
 <div id="topics">
   <ul>
 <h4>Linux</h4>
