new .css link, class smaller-overtext

--- a/pages/GNU-Linux.html
+++ b/pages/GNU-Linux.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" type="text/css" href="../assets/css/animations.css">
 <link rel="stylesheet" type="text/css" href="../assets/css/layout.css">
 <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+<link rel="stylesheet" type="text/css" href="../assets/css/page-about-linux.css">
 <style>
 :root { /* Colors */
     --basic-glow-frame-1: rgba(202,228,225,0.92);
@@ -166,34 +167,35 @@ body {
 <b class="o">Richard Stallman (1983)</b>.</p>
 <p class="more-text"><q><b>G</b>NU is <b>n</b>ot <b>U</b>nix</q></p>
 <h4>Derivate</h4>
-<ul>
-<li><b class="b">Ubuntu</b> (Canonical Ltd.)</li>
-<li><b class="b">Fedora</b> (Red Hat)</li>
-<li><b class="b">Linux Mint</b> (Linux Mint team)</li>
-<li><b class="b">Debian</b> (The Debian Project)</li>
-<li><b class="b">openSUSE</b> (SUSE)</li>
-<li><b class="b">CentOS</b> (Red Hat)</li>
-<li><b class="b">Kali Linux</b> (Offensive Security)</li>
-<li><b class="b">Elementary OS</b> (Elementary LLC)</li>
-<li><b class="b">Manjaro</b> (Manjaro GmbH &amp; Co. KG)</li>
-<li><b class="b">Zorin OS</b> (Zorin Group Ltd.)</li>
-<li><b class="b">Solus</b> (Solus Project)</li>
-<li><b class="b">Void Linux</b> (Void Linux)</li>
-<li><b class="b">LXLE</b> (LXLE Team)</li>
-<li><b class="b">SparkyLinux</b> (SparkyLinux Team)</li>
-<li><b class="b">Gentoo</b> (Gentoo Foundation)</li>
-<li><b class="b">Slackware</b> (Patrick Volkerding)</li>
-<li><b class="b">PCLinuxOS</b> (PCLinuxOS Team)</li>
-<li>...und viele mehr!</li>
+<ul class="smaller-overtext">
+<li><b class="b">Ubuntu</b>&nbsp;(Canonical&nbsp;Ltd.)</li>
+<li><b class="b">Fedora</b>&nbsp;(Red&nbsp;Hat)</li>
+<li><b class="b">Linux&nbsp;Mint</b>&nbsp;(Linux&nbsp;Mint&nbsp;team)</li>
+<li><b class="b">Debian</b>&nbsp;(The&nbsp;Debian&nbsp;Project)</li>
+<li><b class="b">openSUSE</b>&nbsp;(SUSE)</li>
+<li><b class="b">CentOS</b>&nbsp;(Red&nbsp;Hat)</li>
+<li><b class="b">Kali&nbsp;Linux</b>&nbsp;(Offensive&nbsp;Security)</li>
+<li><b class="b">Elementary&nbsp;OS</b>&nbsp;(Elementary&nbsp;LLC)</li>
+<li><b class="b">Manjaro</b>&nbsp;(Manjaro&nbsp;GmbH&nbsp;&amp;&nbsp;Co.&nbsp;KG)</li>
+<li><b class="b">Zorin&nbsp;OS</b>&nbsp;(Zorin&nbsp;Group&nbsp;Ltd.)</li>
+<li><b class="b">Solus</b>&nbsp;(Solus&nbsp;Project)</li>
+<li><b class="b">Void&nbsp;Linux</b>&nbsp;(Void&nbsp;Linux)</li>
+<li><b class="b">LXLE</b>&nbsp;(LXLE&nbsp;Team)</li>
+<li><b class="b">SparkyLinux</b>&nbsp;(SparkyLinux&nbsp;Team)</li>
+<li><b class="b">Gentoo</b>&nbsp;(Gentoo&nbsp;Foundation)</li>
+<li><b class="b">Slackware</b>&nbsp;(Patrick&nbsp;Volkerding)</li>
+<li><b class="b">PCLinuxOS</b>&nbsp;(PCLinuxOS&nbsp;Team)</li>
+<li>...und&nbsp;viele&nbsp;mehr!</li>
 <p>Forum: <a href="https://distrowatch.com/"><i>DistroWatch.com</i></a></p>
 </ul>
 </div><hr>
 <h4>Installation</h4>
+<div class="more-text">
 <ol>
 <li>1. ISO herunterladen</li>
 <li>2. Medium erstellen</li>
 <li>3. Medium booten</li>
-<ul class="more-text">
+<ul class="smaller-overtext">
 <h4>Assistenten:</h4>
 <li><b class="y">Anaconda</b> (Anaconda, Inc.)</li>
 <li><b class="y">YaST</b> (SUSE)</li>
@@ -216,7 +218,7 @@ body {
 <li><b class="y">Puppet</b> (Puppet Labs)</li>
 <li><b class="y">Ansible</b> (Red Hat)</li>
 <li><b class="y">SaltStack</b> (SaltStack, Inc.)</li>
-</ul>
+</ul><br>
 <li>4. System aktualisieren:</li>
 <ul><li><code>sudo apt update &amp;&amp; sudo apt upgrade -y</code></li>
 <p class="more-text">Bei veralteten Systemen können Upgrade-Konflikte entstehen, diese löst man durch das Neuinstallieren betroffener Abhängigkeiten:<br><code>sudo apt dist-upgrade</code></p></ul></ol>
