to-do alot i must o,o

--- a/pages/GNU-Linux.html
+++ b/pages/GNU-Linux.html
@@ -15,7 +15,9 @@
 <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 <link rel="stylesheet" type="text/css" href="../assets/css/page-about-linux.css">
 <style>
-:root { /* Colors */
+:root {
+    --base-font-size: 14px;
+    --high-ground: rgba(0,0,0,0.1);
     --basic-glow-frame-1: rgba(202,228,225,0.92);
     --basic-glow-frame-2: rgba(202,228,225,0.34);
     --basic-glowbox-frame-1: rgba(202,228,225,0.98);
@@ -31,8 +33,6 @@
     --glow-lightgreen: #8dd88e;
     --glow-pink: #ffbfea;
     --glow-lightyellow: #ebebd3;
-    --base-font-size: 16px;
-    --high-ground: rgba(0,0,0,0.1);
     --laser-blue: #00f0f0;
     --matrix-green: #8dd88e;
     --neon-pink: #ffbfea;
